fix(cdcl): migliorata la generazione della prova nel solver CDCL.